# ura_ia_tr

./: .gitignore  Dockerfile  README.md  contexto_ia.txt  env.example  roteiro_de_projeto.md  run_test.py  setup.py.example  sip_service.proto
pjlib/include/pj/: config_site.h.example
src/: main.py
src/api/: routes.py
src/core/: call_handler.py  call_manager.py
src/services/: audio_player.py  audio_source.py
src/sip/: my_account.py  my_audio_media.py  my_call.py  pjsua2_service.py
tests/: test_health.py
ura_grpc/: CMakeLists.txt  README_DOCKER.md  client.py  server.cpp  sip_service.grpc.pb.cc  sip_service.grpc.pb.h  sip_service.pb.cc  sip_service.pb.h  sip_service_pb2.py  sip_service_pb2_grpc.py
venv_pjsip/: pyvenv.cfg
